--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
+<h1 style="display:block; text-align:center;">Welcome to Richie's Paper, Rock,Scissors Game!</h1>
+<h2 style="display:block; text-align:center;">Type your choice:</h2>
     <script src="javascript.js"></script>
 </body>
 </html>
