--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
 </head>
-<body>
-<h1 style="display:block; text-align:center;">Welcome to Richie's Paper, Rock,Scissors Game!</h1>
-<h2 style="display:block; text-align:center;">Type your choice:</h2>
+<body style="font-family:Helvetica;">
+<h1 style="display:block; text-align:center;">Welcome to Richie's Paper, Rock and Scissors Game!</h1>
+<h2 style="display:block; text-align:center;">1 point per win, half a point for a draw</h2>
+<h3 style="display:block; text-align:center;">Best of five rounds</h3>
     <script src="javascript.js"></script>
 </body>
 </html>
