changed layout because of issues displaying in Chrome

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body style="font-family:Verdana, Geneva, Tahoma, sans-serif;">
-<h1 style="display:block; text-align:center;">Welcome to Richie's Paper, Rock and Scissors Game!</h1>
-<h2 style="display:block; text-align:center;">1 point per win, half a point for a draw</h2>
-<h3 style="display:block; text-align:center;">Best of five rounds</h3>
+<h1 style="display:block; text-align:left; width: 500px;">Welcome to Richie's Paper, Rock and Scissors Game!</h1>
+<h2 style="display:block; text-align:left; width:400px;">1 point per win, half a point for a draw</h2>
+<h3 style="display:block; text-align:left; width:480px;">Best of five rounds</h3>
+<h4 style="display:block; text-align:left; width:480px;">Good luck!</h4>
     <script src="javascript.js"></script>
 </body>
 </html>
