--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock, Paper, Scissors</title>
+    <title>Dwayne the "Rock, Paper, Scissors" Johnson</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body style="font-family:Verdana, Geneva, Tahoma, sans-serif;">
-<h1 style="display:block; text-align:left; width: 500px;">Welcome to Richie's Paper, Rock and Scissors Game!</h1>
-<h2 style="display:block; text-align:left; width:400px;">1 point per win, half a point for a draw</h2>
-<h3 style="display:block; text-align:left; width:480px;">Best of five rounds</h3>
-<h4 style="display:block; text-align:left; width:480px;">Good luck!</h4>
+    
+    <div class="content">
+        <h1>Dwayne "The Rock, Paper, Scissors" Johnson</h1>
+        <div class="buttons"> 
+            <button id="rock"><img src = "images/Dwayne-Rock.png"></button>
+            <button id="paper"><img src = "images/Dwayne-Paper.png"></button>
+            <button id="scissors"><img src = "images/Dwayne-Scissors.png"></button>
+        </div>
+       
+
+
+
+
+
+
+
+    </div>
+
+
+
+
+
     <script src="javascript.js"></script>
 </body>
 </html>
