Running total and winner declaration. Game now finished.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dwayne the "Rock, Paper, Scissors" Johnson</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="font-family:Verdana, Geneva, Tahoma, sans-serif;">
+<body style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
     
     <div class="content">
         <h1>Dwayne "The Rock, Paper, Scissors" Johnson</h1>
@@ -17,10 +17,12 @@
             <button id="scissors"><img src = "images/Dwayne-Scissors.png"></button>
         </div>
        
+<div class="scores">
+<div id="player">You: </div>
+<div id="computer">Dwayne: </div>
+</div>
 
-
-
-
+<p>First to five points wins!</p>
 
 
 
